<resources>
    <string name="app_name">MedicalDealer</string>
    <string name="app_name_short">MDealer</string>

    <string name="activity_label_login">114 User</string>
    <string name="activity_label_contact">选择用户</string>
    <string name="activity_label_contact_create">创建用户</string>
    <string name="activity_label_contact_edit">编辑用户</string>
    <string name="activity_label_hospital">选择医院</string>
    <string name="activity_label_hospital_create">创建医院</string>
    <string name="activity_label_hospital_edit">编辑医院</string>
    <string name="activity_label_department">选择科室</string>
    <string name="activity_label_department_create">创建科室</string>
    <string name="activity_label_department_edit">编辑科室</string>
    <string name="activity_label_doctor">选择医生</string>
    <string name="activity_label_doctor_create">创建医生</string>
    <string name="activity_label_doctor_edit">编辑医生</string>

    <string name="medical_service_notification_text">Medical Dealer Service Is Running</string>

    <string name="select_confirm">确认选择</string>
    <string name="edit_btn">修改</string>
    <string name="del_btn">删除</string>
    <string name="del_message">确认删除吗</string>
    <string name="confirm_sure">确认</string>
    <string name="confirm_cancel">取消</string>
    <string name="loading_message">loading...</string>

    <!-- login -->
    <string name="login_user_name">114 User Name</string>
    <string name="login_pwd">114 Pwd</string>
    <string name="login_btn">Sign In</string>

    <!-- main -->
    <string name="select_hospital">选择医生</string>
    <string name="select_contact">选择用户</string>
    <string name="select_date">选择日期</string>
    <string name="info_view_text">未选择</string>
    <string name="start_btn">开始</string>
    <string name="user_btn">114 User</string>

    <!-- hospital -->
    <string name="create_hospital">创建医院</string>
    <string name="hospital_name">医院名称</string>
    <string name="hospital_Id">医院标识</string>
    <string name="hospital_save">创建医院</string>
    <string name="hospital_save_edit">保存医院</string>

    <!-- department -->
    <string name="create_department">创建科室</string>
    <string name="department_name">科室名称</string>
    <string name="department_id">科室标识</string>
    <string name="department_save">创建科室</string>
    <string name="department_save_edit">保存科室</string>

    <!-- contact -->
    <string name="create_contact">创建用户</string>
    <string name="edit_contact">保存用户</string>
    <string name="create_contact_name">用户名称</string>
    <string name="create_contact_id">用户标识</string>
    <string name="create_contact_hospitalCard">就诊卡</string>
    <string name="create_contact_medicareCard">医疗卡</string>

    <!-- doctor -->
    <string name="create_doctor">创建医生</string>
    <string name="doctor_name">医生名称</string>
    <string name="doctor_id">医生标识</string>
    <string name="doctor_title">职称</string>
    <string name="doctor_skill">特长</string>
    <string name="doctor_timer">设置出诊周期</string>
    <string name="doctor_search">选择日期进行查询</string>
    <string name="doctor_info_unknow">未选择</string>
    <string name="doctor_create">创建医生</string>
    <string name="doctor_save">保存医生</string>
    <string name="doctor_add_skill">增加专长</string>
    <string name="doctor_ex_title">专家</string>

    <!-- date picker -->
    <string name="date_picker_title">选择日期</string>
    <string name="date_picker_am">上午</string>
    <string name="date_picker_pm">下午</string>
    <string name="date_picker_full">全天</string>
    <string name="date_picker_confirm">确定</string>
    <string name="date_picker_week_1">星期一</string>
    <string name="date_picker_week_2">星期二</string>
    <string name="date_picker_week_3">星期三</string>
    <string name="date_picker_week_4">星期四</string>
    <string name="date_picker_week_5">星期五</string>
    <string name="date_picker_week_6">星期六</string>
    <string name="date_picker_week_7">星期日</string>
    <string name="title_activity_login">Sign in 114</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
