<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="anson.std.medical.dealer.activity.DoctorActivity">

    <TextView
        android:id="@+id/doctor_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/doctor_name_input"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/doctor_id_label_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_id"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/doctor_name_input"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/doctor_id_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/doctor_info_unknow"
        app:layout_constraintLeft_toRightOf="@+id/doctor_id_label_view"
        app:layout_constraintTop_toBottomOf="@+id/doctor_name_input" />

    <TextView
        android:id="@+id/doctor_title_label_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_title"
        app:layout_constraintLeft_toRightOf="@+id/doctor_id_view"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/doctor_name_input"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/doctor_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/doctor_info_unknow"
        app:layout_constraintLeft_toRightOf="@+id/doctor_title_label_view"
        app:layout_constraintTop_toBottomOf="@+id/doctor_name_input" />

    <TextView
        android:id="@+id/doctor_skill_label_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_skill"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/doctor_id_label_view"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/doctor_skill_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/doctor_info_unknow"
        app:layout_constraintLeft_toRightOf="@+id/doctor_skill_label_view"
        app:layout_constraintTop_toBottomOf="@+id/doctor_id_view" />

    <EditText
        android:id="@+id/doctor_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/doctor_name_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doctor_timer_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/doctor_timer"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_skill_view" />

    <ListView
        android:id="@+id/doctor_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/doctor_search_view" />

    <TextView
        android:id="@+id/doctor_search_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/doctor_search"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_create_btn" />

    <Button
        android:id="@+id/doctor_create_btn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:onClick="saveDoctor"
        android:text="@string/doctor_create"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_timer_view" />

</android.support.constraint.ConstraintLayout>
