<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="anson.std.medical.dealer.activity.ContactActivity">

    <EditText
        android:id="@+id/contact_name_edit_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/create_contact_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_name_edit_view"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/create_contact_id"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_id_edit_view"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/contact_id_edit_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/contact_name_edit_view" />

    <EditText
        android:id="@+id/contact_hospital_card_edit_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/contact_id_edit_view" />

    <EditText
        android:id="@+id/contact_medicare_card_edit_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/contact_hospital_card_edit_view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/create_contact_hospitalCard"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_hospital_card_edit_view"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/create_contact_medicareCard"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_medicare_card_edit_view"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:onClick="addContact"
        android:text="@string/create_contact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_medicare_card_edit_view" />

</android.support.constraint.ConstraintLayout>
