<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date_picker_date_str_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/date_picker_am_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_am"
        android:textSize="10sp"
        app:layout_constraintRight_toLeftOf="@+id/date_picker_pm_cb"
        android:layout_marginRight="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_picker_pm_cb" />

    <CheckBox
        android:id="@+id/date_picker_pm_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_pm"
        android:textSize="10sp"
        app:layout_constraintRight_toLeftOf="@+id/date_picker_full_cb"
        android:layout_marginRight="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_picker_full_cb" />

    <CheckBox
        android:id="@+id/date_picker_full_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_full"
        android:textSize="10sp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_date_str_view" />

    <TextView
        android:id="@+id/date_picker_week_str_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/date_picker_date_str_view"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
