<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="anson.std.medical.dealer.activity.DepartmentActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/department_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/department_name_edit_view"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/department_name_edit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/department_id_edit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/department_name_edit_view" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/department_id"
        app:layout_constraintBaseline_toBaselineOf="@+id/department_id_edit_view"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/department_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:onClick="save"
        android:text="@string/department_save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/department_id_edit_view" />
</android.support.constraint.ConstraintLayout>
